Add SEO landing page for anamorphic lens searches

--- a/index.html
+++ b/index.html
@@ -119,7 +119,13 @@
       <!-- Monitor -->
       <section class="panel monitor">
         <div class="preview" id="previewBox">
-          <video id="video" playsinline controls preload="metadata"></video>
+			   <video
+		  id="video"
+		  playsinline
+		  controls
+		  preload="metadata"
+		  poster="preview.jpg"
+		></video>
           <canvas id="photoCanvas" class="hidden"></canvas>
         </div>
 
