Add SEO landing page for anamorphic lens searches

--- a/index.html
+++ b/index.html
@@ -222,7 +222,8 @@
         <!-- Backend URL (hidden) -->
         <div class="row" style="display:none">
           <label>Upload URL</label>
-          <input id="uploadUrl" type="text" value="https://api.anamorphic-desqueeze.com/upload" />
+          <!--  <input id="uploadUrl" type="text" value="https://api.anamorphic-desqueeze.com/upload" />-->
+		   <input id="uploadUrl" type="text" value="https://desqueeze-server-render.onrender.com/" />
         </div>
       </section>
 
