Add SEO landing page for anamorphic lens searches

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                      accept="video/*,image/*,.mts,.avi,.mov,.mp4,.png,.jpg,.jpeg"
                      multiple />
             </div>
-            <small>Select up to 10 files. The first item previews above. (Per File Size limit 50–120 MB file)</small>
+            <small>Select up to 10 files.(Per File Size limit 1mb to 5mb MB for Testing) if bigger size need to be porcessed reach to us teamcentersap@gmail.com or feedback</small>
           </div>
         </div>
 
