--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         <div class="row" style="display:none">
           <label>Upload URL</label>
           <!--  <input id="uploadUrl" type="text" value="https://api.anamorphic-desqueeze.com/upload" />-->
-		   <input id="uploadUrl" type="text" value="https://desqueeze-server-render.onrender.com/" />
+		   <input id="uploadUrl" type="text" value="https://desqueeze-server-render.onrender.com/upload" />
         </div>
       </section>
 
