--- a/index.html
+++ b/index.html
@@ -150,6 +150,13 @@
 
       <!-- Settings -->
       <section class="panel" id="settings">
+	  
+	     <div class="row">
+          <label>Files</label>
+          <div>
+            <small>Coming soon upload files to Amazon S3</small>
+          </div>
+        </div>
         <h2>Settings</h2>
 
         <div class="row">
