--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 	     <div class="row">
           <label>Files</label>
           <div>
-            <small>Coming soon upload files to Amazon S3</small>
+            <small>On demand upload files to Amazon S3</small>
           </div>
         </div>
         <h2>Settings</h2>
