--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 </head>
 <body>
 
-  <!-- ===================== ADDED AT TOP (NO FUNCTIONAL CHANGES) ===================== -->
+  <!-- ====================== ASO / SEO TEXT AT TOP (ADDED) ====================== -->
   <main class="seo-copy" id="top-info">
     <h1>Anamorphic De-Squeeze Tool Online — Web Desqueeze Studio</h1>
 
@@ -120,7 +120,8 @@
     </ul>
   </main>
 
-  <section id="tools" class="seo-copy" style="padding-top:0;">
+  <!-- ====================== TOOLS SECTION AT TOP (ADDED) ====================== -->
+  <section id="tools" class="seo-copy">
     <h2>Our Tools</h2>
 
     <p>
@@ -165,7 +166,6 @@
       DeSqueeze Studio is available with free early access and is continuously evolving to meet the demands of professional cinematic production.
     </p>
   </section>
-  <!-- =================== END ADDED AT TOP (NO FUNCTIONAL CHANGES) =================== -->
 
   <!-- Header -->
   <header class="site-header">
